# mmappro

./: settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/mmappro/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FileLogger.cpp  FileLogger.h  native-lib.cpp
app/src/main/java/com/example/mmappro/: DLog.java  DifferentDisplay.kt  FileLogger.java  MainActivity.java  MyLog.java  SecondActivity.kt
app/src/main/java/com/example/mmappro/utils/: MultidexUtils.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mmappro/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
